--- a/cv.html
+++ b/cv.html
@@ -30,7 +30,7 @@
                         <h3>JOB TITLE | Company - Location</h3>
                         <span>Date - Present</span>
                     </div>
-                    <ul>
+                    <ul class="ul-cv">
                         <li>
                             Your resume should be no longer than 1-2 pages. Keep
                             it to 1 page if you have less than 8 years of
@@ -71,7 +71,7 @@
                         <h3>JOB TITLE | Company Location</h3>
                         <span>Date-Date</span>
                     </div>
-                    <ul>
+                    <ul class="ul-cv">
                         <li>
                             It's not enough to describe what you have done or
                             your areas of responsibility, you need to quantify
@@ -104,7 +104,7 @@
                         <h3>JOB TITLE | Company Location</h3>
                         <span>Date-Date</span>
                     </div>
-                    <ul>
+                    <ul class="ul-cv">
                         <li>
                             Be consistent with grammar. Generally, resumes
                             should be written in the past tense. The exception
@@ -128,7 +128,7 @@
                         <h3>JOB TITLE | Company Location</h3>
                         <span>Date-Date</span>
                     </div>
-                    <ul>
+                    <ul class="ul-cv">
                         <li>
                             Congrats! Once you're done filling out the work
                             experience section, the hardest part is over. Now,
