--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                 <a href="./cv.html">CV</a>
             </li>
             <li>
-                <a href="">menu</a>
+                <a href="./menu.html">menu</a>
             </li>
             <li>
-                <a href="">form</a>
+                <a href="./form.html">form</a>
             </li>
         </ul>
     </body>
